[gd_scene load_steps=5 format=3 uid="uid://buwm6dg8acgmi"]

[ext_resource type="Script" path="res://Scripts/shop_card_manager.gd" id="1_h600g"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="1_jibvu"]
[ext_resource type="FontFile" uid="uid://d2voppd6fmkh6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="3_6qlgt"]
[ext_resource type="PackedScene" uid="uid://bdfof7mymlvu" path="res://Scenes/trash_card.tscn" id="4_t07mp"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h600g")

[node name="TrashButton" type="Button" parent="."]
self_modulate = Color(0.138034, 0.138034, 0.138034, 1)
offset_left = 1304.0
offset_top = 560.0
offset_right = 1848.0
offset_bottom = 872.0
theme = ExtResource("1_jibvu")

[node name="Label" type="Label" parent="TrashButton"]
layout_mode = 0
offset_right = 544.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("3_6qlgt")
theme_override_font_sizes/font_size = 32
text = "Trash Card

5$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TagButton" type="Button" parent="."]
self_modulate = Color(0.138034, 0.138034, 0.138034, 1)
offset_left = 1304.0
offset_top = 408.0
offset_right = 1848.0
offset_bottom = 536.0
theme = ExtResource("1_jibvu")

[node name="Label" type="Label" parent="TagButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.937
offset_bottom = 0.0639954
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6qlgt")
theme_override_font_sizes/font_size = 32
text = "Add Tag"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageButton" type="Button" parent="."]
self_modulate = Color(0.138034, 0.138034, 0.138034, 1)
offset_left = 1304.0
offset_top = 192.0
offset_right = 1848.0
offset_bottom = 384.0
theme = ExtResource("1_jibvu")

[node name="Label" type="Label" parent="DamageButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.958
offset_bottom = 0.0639954
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6qlgt")
theme_override_font_sizes/font_size = 32
text = "Add Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
self_modulate = Color(0.138034, 0.138034, 0.138034, 1)
offset_left = 1600.0
offset_top = 920.0
offset_right = 1896.0
offset_bottom = 1056.0
theme = ExtResource("1_jibvu")
keep_pressed_outside = true

[node name="Label" type="Label" parent="Back"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.958
offset_bottom = 0.0639954
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6qlgt")
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 3
offset_left = 1616.0
offset_right = 1928.0
offset_bottom = 144.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.205128
offset_left = 8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 136.0
color = Color(0.105882, 0.105882, 0.105882, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect2/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.236842
anchor_bottom = 0.0078125
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 120.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ColorRect2/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.243243
offset_right = 224.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("3_6qlgt")
theme_override_font_sizes/font_size = 24
text = "Money:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ColorRect2/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
offset_top = 56.0
offset_right = 288.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6qlgt")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrashCard" parent="." instance=ExtResource("4_t07mp")]
z_index = 150
position = Vector2(512, 540)

[connection signal="pressed" from="TrashButton" to="." method="_on_trash_button_pressed"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
